# drift-watchdog

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
dashboards/: drift-watchdog.json
examples/: k8s-sidecar.yaml  watchdog.yaml
src/drift_watchdog/: __init__.py  alerts.py  audit_logger.py  baseline.py  cli.py  concept_drift.py  config.py  correlation_analysis.py  data_quality.py  detector.py  drift_explainer.py  exporter.py  models.py  performance_tracker.py  reporting.py  schema_validator.py  statistics.py  trend_analysis.py
tests/: __init__.py  test_baseline.py  test_detector.py  test_statistics.py
